# sre-copilot

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
backend/: config.py  db.py  main.py  models.py
backend/ai/: client.py  embeddings.py  prompts.py  rag.py  scrubber.py  triage.py
backend/api/: alerts.py  feedback.py  health.py  runbooks.py
backend/integrations/: cloudwatch.py  datadog.py  loki.py  slack.py
backend/tests/: conftest.py  test_rag.py  test_scrubber.py  test_triage.py  test_webhooks.py
backend/tests/fixtures/: sample_am_alert.json  sample_logs.txt  sample_pd_alert.json
backend/webhook/: alertmanager.py  datadog_events.py  pagerduty.py  router.py
docs/: api-reference.md  deployment-modes.md  privacy-security.md  runbook-format.md  setup-guide.md
frontend/: next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/dashboard/: alert-detail.tsx  alert-table.tsx  runbook-upload.tsx  triage-card.tsx
frontend/components/landing/: slack-mockup.tsx
frontend/components/ui/: badge.tsx  button.tsx  dialog.tsx  sheet.tsx
frontend/lib/: api.ts  utils.ts
infra/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  railway.toml
infra/nginx/: nginx.conf
infra/terraform/bedrock-mode/: iam.tf  main.tf  variables.tf
infra/terraform/railway-mode/: README.md
scripts/: seed_runbooks.py  setup_slack.sh  test_alert.sh
(+3 files in other folders)
