[project]
name = "sre-copilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.34.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "chromadb>=0.5.3",
    "aiosqlite>=0.20.0",
    "slack-bolt>=1.18.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.3.0",
    "python-jose[cryptography]>=3.3.0",
    "boto3>=1.34.0",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
